--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "start": "node app.js"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.11.0",
+    "fibers": "^1.0.5",
     "pg": "^4.2.0"
   }
 }
-
-
