--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.10.2",
     "express": "^4.11.0",
     "fibers": "^1.0.5",
-    "pg": "^4.2.0"
+    "node-uuid": "^1.4.2",
+    "orm": "^2.1.22",
+    "pg": "^4.2.0",
+    "pg-hstore": "^2.3.1",
+    "pg-native": "^1.8.0",
+    "sequelize": "^2.0.0-rc8"
   }
 }
