--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.10.2",
     "cors": "^2.5.3",
     "express": "^4.11.0",
+    "extend": "^2.0.0",
     "fibers": "^1.0.5",
     "node-uuid": "^1.4.2",
     "orm": "^2.1.22",
