--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^4.2.0",
     "pg-hstore": "^2.3.1",
     "pg-native": "^1.8.0",
-    "sequelize": "^2.0.0-rc8"
+    "sequelize": "^2.0.0-rc8",
+    "password-hash": "~1.2.2"
   }
 }
