--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "body-parser": "^1.10.2",
     "cors": "^2.5.3",
     "express": "^4.11.0",
+    "express-session": "^1.10.1",
     "extend": "^2.0.0",
     "fibers": "^1.0.5",
     "node-uuid": "^1.4.2",
     "orm": "^2.1.22",
+    "password-hash": "~1.2.2",
     "pg": "^4.2.0",
     "pg-hstore": "^2.3.1",
     "pg-native": "^1.8.0",
-    "sequelize": "^2.0.0-rc8",
-    "password-hash": "~1.2.2"
+    "sequelize": "^2.0.0-rc8"
   }
 }
